# geicar

./: README.md  Script.py
.github/workflows/: ci.yaml
Detect_Direction/: Detect_Direction.py  README.md  direction_angle_visualization.html  map_visualization_tetest7.html  tetest7.csv
GPS/: Script.py  map_visualization_test2.html  map_visualization_test2t4.html  map_visualization_test5.html  map_visualization_test6.html  map_visualization_test8.html  map_visualization_test9.10.html  map_visualization_test9.html  map_visualization_tetest7.html  test1.txt  test2.3xt  test2.csv  test2t4.csv  test5.csv  test6.csv  test8.csv  test9.10.csv  test9.csv  tetest7.csv
Gps_files/: README.md
IA/: .gitignore  dataset.py  main.py  utils.py
IA/DeepLabV3/: dataset.py  main.py  test_model.py
IA/yolo/: convertToYOLO.py
IA/yolo_object/: .gitignore  test.py  test_distance.py  test_video.py  test_video_distance_box.py  train.py
IA/yolo_segmentation/: .gitignore  measure_distance_seg.py  mesure_seg.py  mesure_seg_with_path.py  test.py  train.py  video_seg.py  (+1 more)
cameraFeedback/: index.html  readme.md  ros.js  style.css  tabs.js
data_collector/: data_collector.py  package.xml  setup.py
imageCapture/: takeMultiplePictures.py  takePicture.py  takeVideo.py
jetsonNano/ros2_ws/src/space_environment/: CMakeLists.txt  package.xml
jetsonNano/ros2_ws/src/space_environment/include/: space_environment.hpp  space_environment_debug.hpp
jetsonNano/ros2_ws/src/space_environment/src/: space_environment.cpp  space_environment_debug.cpp
openCV_test/: excludeHSV.py  groundDetection.py  mesure_pixel.py  pathDetection.py  pathIdentification.py  readme.md
pathDetection/: followLine.py  followLineVideo.py  identifyHSV.py  mesure_pixel_interactive.py  pathDetection.py  pathIdentificationMeasure.py
(+86 files in other folders)
