<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>space_environment</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="root@todo.todo">root</maintainer>
    <license>GPL-3.0-only</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>
    <buildtool_depend>ament_cmake_ros</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>interfaces</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>interfaces</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
